modules/03-network-resiliency/fault-injection/abort/catalogdetail-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogdetail
  namespace: workshop
spec:
  hosts:
  - catalogdetail
  http:
  - match:
    - headers:
        user:
          exact: "internal"
    fault:
      abort:
        percentage:
          value: 100
        httpStatus: 500
    route:
    - destination:
        host: catalogdetail
        port:
          number: 3000
  - route:
    - destination:
        host: catalogdetail
        port:
          number: 3000
